# Multi-Agent

./: .env.example  .gitignore  DESIGN_REPORT.md  README.md  a2a_protocol.py  langchain_agent.py  langgraph_agent.py  logger.py  main.py  models.py  multi-agent.ipynb  pyproject.toml  requirements.txt  search_agent.py  simple_agent.py  streamlit_interface.py  summarizer_agent.py  verifier_agent.py
