[project]
name = "multi-agent-competitive-intelligence"
version = "0.1.0"
description = "Multi-Agent LLM System for Competitive Intelligence"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langgraph>=0.3.18",
    "langchain>=0.3.0",
    "langchain-openai>=0.1.0",
    "langchain-community>=0.3.0",
    "langchain-core>=0.3.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "duckduckgo-search>=6.2.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.10.0",
    "jupyter>=1.0.0",
    "pandas>=2.0.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "aiofiles>=23.0.0",
    "httpx>=0.28.0",
    "openai>=1.0.0",
    "feedparser>=6.0.10",
    "newspaper3k>=0.2.8",
    "dateparser>=1.2.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agents"]
